--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="propaganda">
-                <img src="/img/propaganda.jpg" alt="propaganda">
+                <img src="./img/propaganda.jpg" alt="propaganda">
             </div>
 
             <div class="conteudo-secundario">
